--- a/gb/21/9/16/n13238961.md
+++ b/gb/21/9/16/n13238961.md
@@ -1,62 +1,62 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/mvzvlt3463/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/mvzvlt3463/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/mvzvlt3463/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/mvzvlt3463/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/mvzvlt3463/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>台政院通过《铁路法》修法</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2021年09月16日讯】（大纪元记者李怡欣台湾台北报导）0402<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a><ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%A4%AA%E9%B2%81%E9%98%81%E5%8F%B7.md#1">太鲁阁号</a>事故，<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E9%83%A8.md#1">交通部</a>宣示<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a>改革决心。16日，行政院会通过《<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E9%93%81%E8%B7%AF%E6%B3%95.md#1">铁路法</a>》部分条文修正草案。行政院长苏贞昌表示，台铁对国家贡献甚钜，不过也因为发生不幸事故，让国人有所责备，政府应虚心检讨、诚实面对、勇敢改革。他对台铁改革目标只有一句话，“要有票、要有座位、要准时到达”，朝“安全、安定”改革，态度就是“决心、同理心”。</p>
-<p>苏贞昌表示，面对事故发生，台铁要痛加改进，未来将会持续紧盯台铁安全改革每个环节，务必请<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E9%83%A8.md#1">交通部</a>落实推动，让交通更安全；关于台铁转型，苏贞昌说，员工权利不会减少，但台铁需充分沟通，期待台铁更好。</p>
-<p>鉴于0402台铁408次<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E5%A4%AA%E9%B2%81%E9%98%81%E5%8F%B7.md#1">太鲁阁号</a>事故，交通部指出，为强化台铁行车安全，已责成台铁局全面推动安全改革，透过人、车、路三面向检视，及各项督导改善措施。要求，台铁局借镜中华航空及台湾高铁公司经验，导入台铁安全管理系统（SMS），改变为自主式机制；同时，请台铁局于今年底，引进专业技术顾问将SMS各项作业指引导引内化至基层落实执行，由交通部明年第1季起，委托专业机构办理第三方评鉴。</p>
+<p>【大纪元2021年09月16日讯】（大纪元记者李怡欣台湾台北报导）0402<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a><ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%AA%E9%B2%81%E9%98%81%E5%8F%B7.md#1">太鲁阁号</a>事故，<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E9%83%A8.md#1">交通部</a>宣示<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%8F%B0%E9%93%81.md#1">台铁</a>改革决心。16日，行政院会通过《<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%93%81%E8%B7%AF%E6%B3%95.md#1">铁路法</a>》部分条文修正草案。行政院长苏贞昌表示，台铁对国家贡献甚钜，不过也因为发生不幸事故，让国人有所责备，政府应虚心检讨、诚实面对、勇敢改革。他对台铁改革目标只有一句话，“要有票、要有座位、要准时到达”，朝“安全、安定”改革，态度就是“决心、同理心”。</p>
+<p>苏贞昌表示，面对事故发生，台铁要痛加改进，未来将会持续紧盯台铁安全改革每个环节，务必请<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E4%BA%A4%E9%80%9A%E9%83%A8.md#1">交通部</a>落实推动，让交通更安全；关于台铁转型，苏贞昌说，员工权利不会减少，但台铁需充分沟通，期待台铁更好。</p>
+<p>鉴于0402台铁408次<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E5%A4%AA%E9%B2%81%E9%98%81%E5%8F%B7.md#1">太鲁阁号</a>事故，交通部指出，为强化台铁行车安全，已责成台铁局全面推动安全改革，透过人、车、路三面向检视，及各项督导改善措施。要求，台铁局借镜中华航空及台湾高铁公司经验，导入台铁安全管理系统（SMS），改变为自主式机制；同时，请台铁局于今年底，引进专业技术顾问将SMS各项作业指引导引内化至基层落实执行，由交通部明年第1季起，委托专业机构办理第三方评鉴。</p>
 <p>为强化铁道监理制度与执行，交通部将责成铁道局持续办理铁路监理法规修订、推动国家铁道安全计划、加强台铁临轨工程缺失改善检查，以及检定核发铁道驾驶执照。</p>
-<p>目前行政院会通过的<ahref="https://github.com/mvzvlt3463/djy/blob/master/gb/tag/%E9%93%81%E8%B7%AF%E6%B3%95.md#1">铁路法</a>部分条文修正草案，为第一阶段检讨成果，除使铁道局法定监理权责明确化，并增订安全监理检查机制，赋予铁道局对铁路机构事故事件调查权。另外，松绑国营铁路机构不动产资产开发，就具观光路线收取费用，可使台铁财务正常化。</p>
+<p>目前行政院会通过的<ahref="https://github.com/xsumwp3307/djy/blob/master/gb/tag/%E9%93%81%E8%B7%AF%E6%B3%95.md#1">铁路法</a>部分条文修正草案，为第一阶段检讨成果，除使铁道局法定监理权责明确化，并增订安全监理检查机制，赋予铁道局对铁路机构事故事件调查权。另外，松绑国营铁路机构不动产资产开发，就具观光路线收取费用，可使台铁财务正常化。</p>
 <p>责任编辑：陈玟绮</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/14/4/16/n4133203.md#1">台铁路法拟修  占车站大厅将罚款</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/14/4/16/n4133273.md#1">台铁路法修改 占用车站大厅罚7500元</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/14/7/14/n4200262.md#1">铁路法修正  首例黄牛恐罚50万</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/7/21/n8121589.md#1">长岛铁路法拉盛车站 电梯工程动工</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/10/21/n8419712.md#1">台《铁路法》三读 假资料购票最重关五年</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/19/2/4/n11023786.md#1">林铁及县警局联合劝导违反铁路法案件</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/23/n13393357.md#1">本土＋0 11/25可直接到医疗院所混打</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/23/n13393321.md#1">打造刺猬岛 2400亿海空战力提升条例三读</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/23/n13393169.md#1">国际刑警组织大会 逾30国挺台参与</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391244.md#1">中共“以武逼统”台湾展现民主韧性 区分中共与中国人民</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/4/16/n4133203.md#1">台铁路法拟修  占车站大厅将罚款</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/4/16/n4133273.md#1">台铁路法修改 占用车站大厅罚7500元</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/7/14/n4200262.md#1">铁路法修正  首例黄牛恐罚50万</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/7/21/n8121589.md#1">长岛铁路法拉盛车站 电梯工程动工</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/10/21/n8419712.md#1">台《铁路法》三读 假资料购票最重关五年</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/2/4/n11023786.md#1">林铁及县警局联合劝导违反铁路法案件</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740722.md#1">中共官媒刻意突显李克强？日媒：习近平已被架空</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740871.md#1">台政院修矿业法删霸王条款 新增原住民咨商同意</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740874.md#1">台环保蟑螂滥倒废弃物 现行法规难制裁</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740818.md#1">高铁完成转向架测试设备 获欧盟认证</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/28/n10749135.md#1" target="_blank">林辉：邓小平女儿指北大曾变成法西斯集中营</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/2/n11295577.md#1" target="_blank">西方法轮功学员忆师父欧洲传法 谈修炼故事</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10513937.md#1" target="_blank">摧毁传统乡绅制与现代法治基础的痞子运动</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/6/n11705340.md#1" target="_blank">修炼真善忍 “巨型脑肿瘤”不治而愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/16/n13379941.md#1">【百年真相】张高丽和江派官员淫乱秘闻</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/15/n13376505.md#1">【人生之钥】死前五天他翻转人生 官至一品寿高八十</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/18/n13384403.md#1">【未解之谜】寻找巨人的真相</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/10/31/n13343096.md#1">故乡见闻：“真疯”</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/13/n13373689.md#1">“眉寿”是指几岁高寿？典故为何和春酒有关？</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13391470.md#1">【拍案惊奇】彭帅现状凶险 胡锡进发片露马脚</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388333.md#1">【横河观点】中国共产运动拐点 暴严重衰老迹象</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389736.md#1">【军事热点】美日海军反潜战演习意在牵制中共</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13387150.md#1">分析：彭帅事件为中共带来真正挑战和窘境</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13385054.md#1">中共拟惩处翻墙软件提供者 分析：翻墙封不住</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13386902.md#1">昆凌6岁女偷戴妈妈珠宝 周杰伦怕搞丢追着跑</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/19/n13387175.md#1">范丞丞新片首映 范冰冰当观众入场支持</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/22/n13390513.md#1">大S与汪小菲宣布离婚 未来共同抚养小孩</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388773.md#1">徐若瑄平安出院返家 与儿子相拥合照晒幸福</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13389659.md#1">被爆与黄晓明公司切割 杨颖悄悄转投新东家</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/16/n13379868.md#1">这些地雷早餐少碰 会越吃越胖 怎样吃才健康？</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/20/n13388038.md#1">哈士奇犬习惯做鬼脸 逗主人开心</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388685.md#1">湖南大胃王太会吃 遭吃到饱餐厅封杀</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/21/n13388603.md#1">美国加州公路上满地都是钞票 民众停车捡拾</a></li>
-<li><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/21/11/18/n13383514.md#1">你的腹肌有多强？做1个简单动作就知道</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/11/n13733580.md#1">听《顶碗舞》品蒙古奶茶 体验千年不变的热情</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740136.md#1">【拍案惊奇】民航系统不单纯 涉党内倒习操作？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740132.md#1">【财商天下】核检日赚一亿 钱进了谁的口袋？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">任贤齐介绍田中老家 吃喝不花钱自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736847.md#1">9大体质快看你是哪种？教你调回最佳体质</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/mvzvlt3463/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/mvzvlt3463/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/16/n13238961.htm">台政院通过《铁路法》修法</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/9/16/n13238961.htm">台政院通过《铁路法》修法</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/mvzvlt3463/djy/blob/master/gb/21/9/16/n13238961.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/mvzvlt3463/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mvzvlt3463/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mvzvlt3463/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/mvzvlt3463/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/21/9/16/n13238961.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
